--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,23 @@ dependencies {
 
     implementation 'io.github.youth5201314:banner:2.2.2'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    //Gson converter
+    api 'com.squareup.retrofit2:converter-gson:2.0.2'
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    implementation("com.squareup.retrofit2:converter-scalars:2.6.0")
+    implementation('com.squareup.okhttp3:logging-interceptor:3.10.0')
+    implementation "io.reactivex.rxjava2:rxjava:2.2.6" // 必要rxjava依赖
+    implementation "io.reactivex.rxjava2:rxandroid:2.1.0" // 必要rxandrroid依赖，切线程时需要用到
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.5.0' // 必要依赖，和rxjava结合必须用到
+    //网络请求 okhttp3
+    implementation 'com.squareup.okhttp3:okhttp:3.9.1'
+    //日志的拦截器
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
+    implementation 'com.squareup.okhttp3:mockwebserver:3.9.1'
+    //Facebook强大的监测工具
+    implementation 'com.facebook.stetho:stetho-okhttp3:1.3.1'
+
+    implementation 'com.alibaba:fastjson:1.1.71.android'
 }
