--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".view.RegisterActivity"/>
+        <activity android:name=".view.ArticleActivity"/>
+
         <activity android:name=".view.PassageActivity"/>
     </application>
 
