--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:theme="@style/Theme.EnglishApp"
         tools:targetApi="31">
         <activity
-            android:name=".view.MainActivity"
+            android:name=".view.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -31,8 +31,9 @@
         </activity>
         <activity android:name=".view.RegisterActivity"/>
         <activity android:name=".view.ArticleActivity"/>
-
+        <activity android:name=".view.SearchActivity"/>
         <activity android:name=".view.PassageActivity"/>
+        <activity android:name=".view.MainActivity"/>
     </application>
 
 </manifest>
