--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,10 @@ dependencies {
     implementation 'com.squareup.okhttp3:mockwebserver:3.9.1'
     //Facebook强大的监测工具
     implementation 'com.facebook.stetho:stetho-okhttp3:1.3.1'
+
+    implementation 'com.github.bumptech.glide:glide:4.11.0'//glide
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    implementation 'com.facebook.fresco:fresco:2.0.0'//fresco
+    implementation('com.prolificinteractive:material-calendarview:1.4.0') //calendar
+
 }
